manifests/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: oceanus
  name: oceanus
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
