manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: oceanus
spec:
  ports:
  - name: oceanus
    port: 1324
    targetPort: 1324
  selector:
    app: oceanus
  clusterIP: None
